--- a/picup/ui_files/KeyRequest.ui
+++ b/picup/ui_files/KeyRequest.ui
@@ -33,21 +33,21 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="5" column="2">
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="pushButton_ok">
         <property name="text">
          <string>OK</string>
         </property>
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="pushButton_cancel">
         <property name="text">
          <string>Abbrechen</string>
         </property>
        </widget>
       </item>
       <item row="3" column="0" colspan="3">
-       <widget class="QLineEdit" name="lineEdit">
+       <widget class="QLineEdit" name="lineEdit_apikey">
         <property name="readOnly">
          <bool>false</bool>
         </property>
