--- a/picup/ui_files/MainWindow.ui
+++ b/picup/ui_files/MainWindow.ui
@@ -53,7 +53,7 @@
      </widget>
     </item>
     <item row="0" column="0" rowspan="4">
-     <widget class="QTableView" name="tableView_files"/>
+     <widget class="QListView" name="listView_files"/>
     </item>
    </layout>
   </widget>
