--- a/picup/ui_files/LinkDialog.ui
+++ b/picup/ui_files/LinkDialog.ui
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>Links</class>
+ <widget class="QDialog" name="Links">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>530</width>
+    <width>572</width>
     <height>218</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <property name="locale">
+   <locale language="German" country="Germany"/>
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
     <widget class="QProgressBar" name="progressBar_upload">
      <property name="maximum">
       <number>0</number>
@@ -33,8 +36,14 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item>
     <widget class="QScrollArea" name="scrollArea">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
@@ -43,10 +52,11 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>514</width>
+        <width>556</width>
         <height>175</height>
        </rect>
       </property>
+      <zorder>progressBar_upload</zorder>
      </widget>
     </widget>
    </item>
