--- a/picup/ui_files/LinkWidget.ui
+++ b/picup/ui_files/LinkWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>picture</class>
+ <widget class="QWidget" name="picture">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -22,6 +22,12 @@
      <property name="title">
       <string>GroupBox</string>
      </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+     <property name="checkable">
+      <bool>false</bool>
+     </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="1">
        <widget class="QLabel" name="label">
@@ -39,6 +45,12 @@
       </item>
       <item row="1" column="0" rowspan="5">
        <widget class="QLabel" name="label_picture">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="minimumSize">
          <size>
           <width>139</width>
