--- a/picup/ui_files/KeyRequest.ui
+++ b/picup/ui_files/KeyRequest.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>352</width>
-    <height>234</height>
+    <height>250</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Login</string>
   </property>
   <property name="locale">
    <locale language="German" country="Germany"/>
