--- a/picup/ui_files/LinkDialog.ui
+++ b/picup/ui_files/LinkDialog.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>572</width>
-    <height>218</height>
+    <height>360</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Links</string>
   </property>
   <property name="locale">
    <locale language="German" country="Germany"/>
@@ -44,6 +44,12 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="minimumSize">
+      <size>
+       <width>550</width>
+       <height>320</height>
+      </size>
+     </property>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
@@ -53,7 +59,7 @@
         <x>0</x>
         <y>0</y>
         <width>556</width>
-        <height>175</height>
+        <height>318</height>
        </rect>
       </property>
       <zorder>progressBar_upload</zorder>
