--- a/picup/ui_files/LinkWidget.ui
+++ b/picup/ui_files/LinkWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>503</width>
+    <width>484</width>
     <height>185</height>
    </rect>
   </property>
@@ -78,7 +78,7 @@
       <item row="1" column="0" rowspan="4">
        <widget class="QLabel" name="label_picture">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
