--- a/picup/ui_files/MainWindow.ui
+++ b/picup/ui_files/MainWindow.ui
@@ -13,16 +13,54 @@
   <property name="windowTitle">
    <string>Picup</string>
   </property>
+  <property name="locale">
+   <locale language="German" country="Germany"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="1">
+    <item row="6" column="1">
+     <widget class="QPushButton" name="pushButton_close">
+      <property name="text">
+       <string>Beenden</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" rowspan="7">
+     <widget class="QListView" name="listView_files">
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QPushButton" name="pushButton_clear_list">
+      <property name="text">
+       <string>Liste leeren</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QPushButton" name="pushButton_remove_selected">
+      <property name="text">
+       <string>Auswahl entfernen</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
      <widget class="QPushButton" name="pushButton_upload">
       <property name="text">
        <string>Hochladen</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
+    <item row="2" column="1">
+     <widget class="QPushButton" name="pushButton_add_picture">
+      <property name="text">
+       <string>Bild hinzufügen</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" rowspan="2">
      <widget class="QFrame" name="frame_file_info">
       <property name="minimumSize">
        <size>
@@ -35,30 +73,6 @@
       </property>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="pushButton_add_picture">
-      <property name="text">
-       <string>Bild hinzufügen</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="1">
-     <widget class="QPushButton" name="pushButton_close">
-      <property name="text">
-       <string>Beenden</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0" rowspan="5">
-     <widget class="QListView" name="listView_files"/>
-    </item>
-    <item row="3" column="1">
-     <widget class="QPushButton" name="pushButton_clear_list">
-      <property name="text">
-       <string>Liste leeren</string>
       </property>
      </widget>
     </item>
