--- a/picup/ui_files/LinkWidget.ui
+++ b/picup/ui_files/LinkWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>538</width>
-    <height>228</height>
+    <height>233</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -137,6 +137,12 @@
          <size>
           <width>150</width>
           <height>150</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>150</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="text">
