--- a/picup/ui_files/MainWindow.ui
+++ b/picup/ui_files/MainWindow.ui
@@ -74,6 +74,18 @@
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="0">
            <widget class="QCheckBox" name="check_box_resize">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>182</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="text">
              <string>Skalieren</string>
             </property>
